# github_actions_test

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake-linux-platform.yml
